Fix: write chapters in rclone mount

--- a/.config/mpv/chapters.conf
+++ b/.config/mpv/chapters.conf
@@ -14,7 +14,7 @@ pause_on_input=no
 autoload=yes
 
 # when closing a media file, automatically write the chapter file to disk
-autosave=no
+autosave=yes
 
 # if 'no', chapter files will be stored in the same directory as the corresponding
 # media files, if 'yes' they will be stored in a configured global directory
