--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,23 +1,29 @@
 animations = true;
-animation-window-mass = true;
-animation-dampening = 20;
+# animation-window-mass = true;
+animation-dampening = 15;
 animation-stiffness = 250;
 animation-clamping = false;
 animation-for-open-window = "zoom";
 animation-for-unmap-window = "zoom";
-animation-for-transient-window = "fly-in";
-animation-for-workspace-switch-in = "slide-down";
-animation-for-workspace-switch-out = "slide-up";
+animation-for-transient-window = "squeeze";
+# animation-for-workspace-switch-in = "slide-down";
+# animation-for-workspace-switch-out = "slide-up";
+
+animation-for-prev-tag = "zoom";
+enable-fading-prev-tag = true;
+animation-for-next-tag = "zoom";
+enable-fading-next-tag = true;
 
 backend = "glx";
-glx-no-stencil = true;
+glx-no-stencil = false;
 glx-no-rebind-pixmap = true;
 
-# shadow = true;
-# shadow-radius = 10;
-# shadow-offset-x = -7;
-# shadow-offset-y = -7;
-# shadow-opacity = 0.50;
+
+shadow = false;
+shadow-radius = 10;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
+shadow-opacity = 0.50;
 
 fading = true;
 fade-in-step = 0.093;
@@ -26,56 +32,74 @@ fade-delta = 10;
 
 inactive-opacity = 0.8;
 active-opacity = 0.8;
-# frame-opacity = 1;
+frame-opacity = 1;
 inactive-opacity-override = false;
 
-
-rounded-corners-exclude=[	
-	"class_g='Polybar'",
-]
+corner-radius = 12;
+rounded-corners-exclude = [ 
+  # "window_type = 'unknown'", 
+  # "window_type = 'desktop'", 
+  # "window_type = 'dock'", 
+  # "window_type = 'toolbar'", 
+  "window_type = 'menu'", 
+  # "window_type = 'utility'",
+  # "window_type = 'splash'", 
+  "window_type = 'dialog'", 
+  # "window_type = 'normal'", 
+  # "window_type = 'dropdown_menu'", 
+  # "window_type = 'popup_menu+++'",
+  "window_type = 'tooltip'", 
+  # "window_type = 'notification'", 
+  # "window_type = 'combo'", 
+  # "window_type = 'dnd'"
+];
 
 opacity-rule = [
-    "100:class_g = 'Code'",
-    "100:class_g = 'Brave-browser'",
+    "80:class_g = 'Code'",    
+    "80:class_g = 'Brave-browser-beta'",
     "100:class_g = 'TelegramDesktop'",          
     "100:class_g = 'figma-linux'",
     "100:class_g = 'mpv'", 
     "100:class_g = 'zoom' && !focused",
     "100:class_g = 'bspwm'",        
+    "100:class_g = 'jetbrains-webstorm'",        
+    "100:class_g = 'jetbrains-idea'",        
+    "100:class_g = 'jetbrains-idea'",        
+    "100:class_g = 'jetbrains-datagrip'",        
+    "80:class_g = 'Alacritty'",
 ];
  
 blur: {
  method = "dual_kawase";
- size = 6;
+ size = 120;
  deviation = true;
  background = true;
  background-frame = true;
  kern = "3x3box";
- strength = 6;
+ strength = 8;
 }
 
 wintypes:
 {
-  tooltip = { fade=true; shadow=false; opacity=1; focus=true; full-shadow=false; };
-  popup_menu = { shadow=false; opacity=1; }
-  dropdown_menu = { shadow=false; opacity=1; }
-  utility = { shadow=false; opacity=1; }
+  tooltip = { fade = true, shadow = true, opacity = 0.75, focus = true, full-shadow = false, },
+  dock = { shadow = false, clip-shadow-above = true, }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
 };
 
-corner-radius = 10;
-round-borders = 0;
+
 daemon = false;
 vsync = true;
-refresh-rate = 60;
 dbus = false;
 mark-wmwin-focused = false;
 mark-ovredir-focused = false;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 
-unredir-if-possible = false;
+unredir-if-possible = true;
 detect-transient = true;
 detect-client-leader = true;
 
 use-damage = false;
-transparent-clipping = false;
+transparent-clipping = true;
