Added blur edges and gallery

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -17,3 +17,8 @@ ctrl+m  script-binding chapters/remove_chapter
 ctrl+.  script-binding chapters/edit_chapter
 N       script-binding chapters/write_chapters
 ctrl+,  script-binding chapters/bake_chapters
+
+b script-message-to blur_edges toggle-blur
+
+g script-message contact-sheet-close; script-message playlist-view-toggle
+x script-message playlist-view-close; script-message contact-sheet-toggle
