--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,17 +1,23 @@
-alang=eng
-slang=spa,esp,lat
-sub-font="Iosevka Nerd Font"
-sub-font-size=18
-sub-bold=yes
-autofit-larger=90%x90%
-osd-on-seek=msg-bar
+volume-max=100
+aid=auto
+sid=auto
+slang=spa,sp,esp,es,eng,en
+subs-with-matching-audio=yes
+sub-scale=0.8
+sub-ass-override=strip
+sub-font="SF Pro Display Medium"
+sub-blur=1
+sub-border-color=0/0/0/0.5
+sub-border-size=1
 
-#background="0.15/0.17/0.2"
-#alpha=yes
-
-profile=gpu-hq
-hwdec=auto
-ytdl-format="bestvideo[height<=?1080]+bestaudio/best"
 
 osd-font="SF Pro Display Medium"
-osd-font-size=28
+osd-font-size=48
+autofit-larger=90%x90%
+osd-on-seek=msg-bar
+osd-blur=1
+osd-border-color=0/0/0/0.5
+
+screenshot-directory="~/Images/Screenshots"
+profile=gpu-hq
+ytdl-format="bestvideo[height<=?1440]+bestaudio/best"
