--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,25 +1,4 @@
-animations = true;
-# animation-window-mass = true;
-animation-dampening = 15;
-animation-stiffness = 250;
-animation-clamping = false;
-animation-for-open-window = "zoom";
-animation-for-unmap-window = "zoom";
-animation-for-transient-window = "squeeze";
-# animation-for-workspace-switch-in = "slide-down";
-# animation-for-workspace-switch-out = "slide-up";
-
-animation-for-prev-tag = "zoom";
-enable-fading-prev-tag = true;
-animation-for-next-tag = "zoom";
-enable-fading-next-tag = true;
-
-backend = "glx";
-glx-no-stencil = false;
-glx-no-rebind-pixmap = true;
-
-
-shadow = false;
+shadow = true;
 shadow-radius = 10;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -30,12 +9,9 @@ fade-in-step = 0.093;
 fade-out-step = 0.093;
 fade-delta = 10;
 
-inactive-opacity = 0.8;
-active-opacity = 0.8;
-frame-opacity = 1;
-inactive-opacity-override = false;
 
-corner-radius = 12;
+corner-radius = 10;
+
 rounded-corners-exclude = [ 
   # "window_type = 'unknown'", 
   # "window_type = 'desktop'", 
@@ -44,62 +20,74 @@ rounded-corners-exclude = [
   "window_type = 'menu'", 
   # "window_type = 'utility'",
   # "window_type = 'splash'", 
-  "window_type = 'dialog'", 
+  "window_type = 'dialog'",   
   # "window_type = 'normal'", 
   # "window_type = 'dropdown_menu'", 
   # "window_type = 'popup_menu+++'",
   "window_type = 'tooltip'", 
   # "window_type = 'notification'", 
   # "window_type = 'combo'", 
-  # "window_type = 'dnd'"
+  # "window_type = 'dnd'",    
+  # ignore class_g = 'Code'
+  "fullscreen"
 ];
-
 opacity-rule = [
     "80:class_g = 'Code'",    
-    "80:class_g = 'Brave-browser-beta'",
+    "90:class_g = 'Cursor'",    
+    "100:class_g = 'Brave-browser-beta'",
     "100:class_g = 'TelegramDesktop'",          
-    "100:class_g = 'figma-linux'",
-    "100:class_g = 'mpv'", 
-    "100:class_g = 'zoom' && !focused",
-    "100:class_g = 'bspwm'",        
-    "100:class_g = 'jetbrains-webstorm'",        
-    "100:class_g = 'jetbrains-idea'",        
-    "100:class_g = 'jetbrains-idea'",        
-    "100:class_g = 'jetbrains-datagrip'",        
-    "80:class_g = 'Alacritty'",
+    "80:class_g = 'figma-linux'",    
+    "90:class_g = 'jetbrains-webstorm'",        
+    "90:class_g = 'jetbrains-idea'",            
+    "100:class_g = 'jetbrains-datagrip'",    
+    "100:class_g = 'mpv'",
+    # 80 all other windows
+    "80:window_type = 'normal'",    
+    # "class_g = 'mpv' && fullscreen"
 ];
+
  
 blur: {
- method = "dual_kawase";
- size = 120;
- deviation = true;
- background = true;
- background-frame = true;
- kern = "3x3box";
- strength = 8;
+  method = "dual_kawase";
+  background = true;
+  background-frame = true;
+  background-fixed = false;
+  kern = "100x100gaussian";
+  strength = 10;
 }
 
-wintypes:
-{
-  tooltip = { fade = true, shadow = true, opacity = 0.75, focus = true, full-shadow = false, },
-  dock = { shadow = false, clip-shadow-above = true, }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
-};
-
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  #"class_g = 'dwm'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 
 daemon = false;
 vsync = true;
 dbus = false;
-mark-wmwin-focused = false;
-mark-ovredir-focused = false;
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 
-unredir-if-possible = true;
+unredir-if-possible = false;
 detect-transient = true;
 detect-client-leader = true;
 
 use-damage = false;
-transparent-clipping = true;
+transparent-clipping = false;
+
+backend = "glx";
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+
+
+animations = true;
+animation-window-mass = true;
+animation-dampening = 20;
+animation-stiffness = 250;
+animation-clamping = false;
+animation-for-open-window = "maximize";
+animation-for-unmap-window = "maximize";
+animation-for-transient-window = "squeeze";
