--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,4 +1,4 @@
-volume-max=100
+
 aid=auto
 sid=auto
 slang=spa,sp,esp,es,eng,en
@@ -21,3 +21,17 @@ osd-border-color=0/0/0/0.5
 screenshot-directory="~/Images/Screenshots"
 profile=gpu-hq
 ytdl-format="bestvideo[height<=?1440]+bestaudio/best"
+
+[wallpaper]
+fullscreen=yes
+title=mpv-wallpaper
+geometry=100%x100%
+border=no
+no-window-dragging
+x11-name=mpv-wallpaper
+hwdec=vaapi
+aid=no
+loop-file=yes
+idle=no
+#background="#427b58"
+really-quiet=yes
