fix: add background to systray

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -29,6 +29,7 @@ rounded-corners-exclude = [
   # "window_type = 'combo'", 
   # "window_type = 'dnd'",    
   # ignore class_g = 'Code'
+  "class_g = 'Polybar'", 
   "fullscreen"
 ];
 opacity-rule = [
@@ -37,15 +38,16 @@ opacity-rule = [
     "100:class_g = 'Brave-browser-beta'",
     "100:class_g = 'TelegramDesktop'",          
     "80:class_g = 'figma-linux'",    
-    "90:class_g = 'jetbrains-webstorm'",        
-    "90:class_g = 'jetbrains-idea'",            
+    "80:class_g = 'jetbrains-webstorm'",        
+    "80:class_g = 'jetbrains-idea'",            
     "100:class_g = 'jetbrains-datagrip'",    
     "100:class_g = 'mpv'",
+    "100:class_g = 'dwmsystray'",
+    #"class_g = 'Polybar'",
     # 80 all other windows
     "80:window_type = 'normal'",    
     # "class_g = 'mpv' && fullscreen"
 ];
-
  
 blur: {
   method = "dual_kawase";
@@ -56,7 +58,9 @@ blur: {
   strength = 10;
 }
 
+
 blur-background-exclude = [
+  # "class_g = 'dwmsystray'",
   "window_type = 'dock'",
   "window_type = 'desktop'",
   #"class_g = 'dwm'",
